<resources>
    <string name="app_name">Zapato</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="login_title">z a p a t o</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or_login">OR</string>
</resources>
