<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="com.zapato.zapatolayout.Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="259dp"
        android:layout_height="51dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material"
        android:textSize="36sp"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/enteruser"
        style="@android:style/TextAppearance.Material"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAppearance="@android:style/TextAppearance.Material"
        app:layout_constraintBottom_toTopOf="@+id/enterpassword"
        app:layout_constraintStart_toStartOf="@+id/enterpassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.923"/>

    <EditText
        android:id="@+id/enterpassword"
        style="@android:style/TextAppearance.Material"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="220dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/loginbutton"/>

    <Button
        android:id="@+id/loginbutton"
        style="@android:style/Widget.Material.Button"
        android:layout_width="111dp"
        android:layout_height="40dp"
        android:layout_marginBottom="136dp"
        android:layout_marginStart="70dp"
        android:background="@android:color/black"
        android:elevation="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/registerbutton"
        style="@android:style/Widget.Material.Button"
        android:layout_width="111dp"
        android:layout_height="40dp"
        android:layout_marginBottom="136dp"
        android:layout_marginEnd="70dp"
        android:background="@android:color/black"
        android:elevation="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/register"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="200dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="105dp"
        android:text="@string/or_login"
        app:layout_constraintBottom_toTopOf="@id/googlebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterpassword"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googlebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"

        android:layout_marginEnd="136dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="10dp"
        android:text="@string/or_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>


</android.support.constraint.ConstraintLayout>
